:lipstick: ingested mnist data objects through DFolder

--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b10297e6-e772-4d8d-bb19-9d32b274df3f",
    "metadata": {
@@ -66,7 +65,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c4a1dafa-bbe4-4ac7-9e39-c7af9e17d54a",
    "metadata": {},
@@ -85,12 +83,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6c79f86d-c7e7-4e2d-b54e-8dc399223d4d",
    "metadata": {},
    "source": [
-    "Let's ingest each of them as a `DObject` and group them with a `DFolder`:"
+    "Let's bulk-ingest the entire folder by leveraging the `DFolder` entity.\n",
+    "\n",
+    "This creates dobject records corresponding to each of the files inside the folder."
    ]
   },
   {
@@ -100,16 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create folder for linking to mnist data objects\n",
-    "dfolder = ln.DFolder(name=\"mnist\")\n",
-    "\n",
-    "# create dobjects and link them to mnist folder\n",
-    "dobjects = [ln.DObject(filepath) for filepath in Path(\"mnist_100/\").glob(\"*\")]\n",
-    "dfolder.dobjects = dobjects\n",
-    "\n",
-    "# ingest all data objects\n",
-    "ln.add(dfolder)\n",
-    "ln.add(dobjects);"
+    "mnist_dir = Path(\"mnist_100/\")\n",
+    "dfolder = ln.DFolder(folder=mnist_dir)"
    ]
   }
  ],
@@ -129,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "nbproject": {
    "id": "GfLCSYv8BjvJ",
