:lipstick: simplified ingestion code

--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -99,8 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mnist_dir = Path(\"mnist_100/\")\n",
-    "dfolder = ln.DFolder(folder=mnist_dir)"
+    "dfolder = ln.DFolder(folder=Path(\"mnist_100/\"))"
    ]
   }
  ],
