:lipstick: integrated all notebooks and used canonical pytorch constructs

--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -7,7 +7,17 @@
     "tags": []
    },
    "source": [
-    "# Ingest a local ML dataset"
+    "# Training a simple autoencoder with LaminDB and PyTorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7225eaaa-b493-4441-86b6-45a9e517c708",
+   "metadata": {},
+   "source": [
+    "LaminDB makes it easy to query datasets for training ML models.\n",
+    "\n",
+    "This is the most basic use case covering the [MNIST](http://yann.lecun.com/exdb/mnist/) dataset."
    ]
   },
   {
@@ -17,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin init --storage \"mnist-local\""
+    "!lamin init --storage \"mnist-100\""
    ]
   },
   {
@@ -38,6 +48,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
+    "import pandas as pd\n",
     "\n",
     "ln.nb.header()"
    ]
@@ -59,9 +70,10 @@
     "\n",
     "s3 = boto3.resource(\"s3\")\n",
     "bucket = s3.Bucket(\"bernardo-test-bucket-1\")\n",
-    "for obj in bucket.objects.filter(Prefix=\"mnist_100/\"):\n",
-    "    Path(obj.key).parent.mkdir(exist_ok=True)\n",
-    "    bucket.download_file(obj.key, obj.key)"
+    "for obj in bucket.objects.filter(Prefix=\"mnist-100/\"):\n",
+    "    if not obj.key.endswith(\"/\"):\n",
+    "        Path(obj.key).parent.mkdir(exist_ok=True)\n",
+    "        bucket.download_file(obj.key, obj.key)"
    ]
   },
   {
@@ -79,7 +91,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls mnist_100/*"
+    "!ls mnist-100/images*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b6dd6d3-82c1-4342-879e-8666230ef6c1",
+   "metadata": {},
+   "source": [
+    "And a `.csv` file containing the labels for each of the images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cd8f27f-1b3c-4b8e-8810-3979ef45a1c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_df = pd.read_csv(\"mnist-100/labels.csv\")\n",
+    "labels_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6ed5d2b-0c9d-4a79-837b-5c8137317293",
+   "metadata": {},
+   "source": [
+    "## Ingest images and labels as data objects"
    ]
   },
   {
@@ -87,9 +126,7 @@
    "id": "6c79f86d-c7e7-4e2d-b54e-8dc399223d4d",
    "metadata": {},
    "source": [
-    "Let's bulk-ingest the entire folder by leveraging the `DFolder` entity.\n",
-    "\n",
-    "This creates dobject records corresponding to each of the files inside the folder."
+    "Let's ingest each image in the folder as a `DObject` record by leveraging the `DFolder` entity."
    ]
   },
   {
@@ -99,7 +136,232 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfolder = ln.DFolder(folder=Path(\"mnist_100/\"))"
+    "folderpath = Path(\"mnist-100/images\").resolve()\n",
+    "img_folder = ln.DFolder(folder=folderpath)\n",
+    "ln.add(img_folder);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61bf5f7e-9567-4396-b494-7704d18e7556",
+   "metadata": {},
+   "source": [
+    "Let's also ingest the labels file as a single data object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15bddadc-dd9c-4442-b4ab-f8857a50da12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = Path(\"mnist-100/labels.csv\").resolve()\n",
+    "labels = ln.DObject(filepath)\n",
+    "ln.add(labels);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "409f29bd-2044-4051-9323-94db3cf0fac2",
+   "metadata": {},
+   "source": [
+    "## Build the PyTorch Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a63b9634-5ecb-4eb8-a402-209d7af232bf",
+   "metadata": {},
+   "source": [
+    "Let's query the relevant data objects to instantiate a [canonical PyTorch custom image dataset](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html#creating-a-custom-dataset-for-your-files)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d955c8f-3b4f-4c6d-8fa4-2d9b1c29f384",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# define the custom dataset class, as seen in the PyTorch guide\n",
+    "\n",
+    "import os\n",
+    "import torch\n",
+    "from torchvision.io import read_image\n",
+    "from torch.utils.data import Dataset\n",
+    "\n",
+    "\n",
+    "class CustomImageDataset(Dataset):\n",
+    "    def __init__(\n",
+    "        self, annotations_file, img_dir, transform=None, target_transform=None\n",
+    "    ):\n",
+    "        self.img_labels = pd.read_csv(annotations_file)\n",
+    "        self.img_dir = img_dir\n",
+    "        self.transform = transform\n",
+    "        self.target_transform = target_transform\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.img_labels)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        img_path = os.path.join(self.img_dir, self.img_labels.iloc[idx, 0])\n",
+    "        image = read_image(img_path).to(torch.float32)\n",
+    "        label = self.img_labels.iloc[idx, 1]\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "        if self.target_transform:\n",
+    "            label = self.target_transform(label)\n",
+    "        return image, label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "982f1a37-0970-41fb-bbad-224b4cdb1dba",
+   "metadata": {},
+   "source": [
+    "The canonical PyTorch dataset takes as input the path to a folder with images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8154d6ae-7ea7-4782-9102-b660e4ae9f2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_folder = ln.select(ln.DFolder).one()\n",
+    "img_folderpath = img_folder.path()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fbbe5e1-84c2-4181-84f5-57af0c29a1e0",
+   "metadata": {},
+   "source": [
+    "As well as the path to a csv file with labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bcd5b5a-4a10-4b28-8c73-9abe19a8b79e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = ln.select(ln.DObject, suffix=\".csv\").one()\n",
+    "labels_filepath = labels.path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "795e6c70-ca26-448a-a9e7-3033e27e4e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = CustomImageDataset(labels_filepath, img_folderpath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5aea514-5f87-4443-9c19-f6ab492b5a50",
+   "metadata": {},
+   "source": [
+    "## Create the PyTorch DataLoaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e033032c-57ae-4f8d-8364-6b39937b8dfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import random_split, DataLoader\n",
+    "\n",
+    "# define train and test splits\n",
+    "train_subset, test_subset = random_split(dataset, [80, 20])\n",
+    "\n",
+    "# create train an test Dataloaders based on splits\n",
+    "train_loader = DataLoader(train_subset.dataset)\n",
+    "test_loader = DataLoader(test_subset.dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ead3af92-59e8-4c97-86f2-9185cefed6d8",
+   "metadata": {},
+   "source": [
+    "## Train a simple autoencoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e7dd583-b394-4b46-8207-bcb76733fb99",
+   "metadata": {},
+   "source": [
+    "We can now train a [canonical PyTorch Lightning autoencoder](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html#creating-a-custom-dataset-for-your-files)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3542b283-9ad2-4615-a20c-205dc941dda2",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import optim, nn\n",
+    "from torchmetrics import Accuracy\n",
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "# torch.set_default_dtype(torch.uint8)\n",
+    "\n",
+    "encoder = nn.Sequential(nn.Linear(28 * 28, 64), nn.ReLU(), nn.Linear(64, 3))\n",
+    "decoder = nn.Sequential(nn.Linear(3, 64), nn.ReLU(), nn.Linear(64, 28 * 28))\n",
+    "\n",
+    "\n",
+    "class LitAutoEncoder(pl.LightningModule):\n",
+    "    def __init__(self, encoder, decoder):\n",
+    "        super().__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.test_accuracy = Accuracy(task=\"multiclass\", num_classes=9)\n",
+    "\n",
+    "    def training_step(self, batch, batch_idx):\n",
+    "        x, y = batch\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        z = self.encoder(x)\n",
+    "        x_hat = self.decoder(z)\n",
+    "        loss = nn.functional.mse_loss(x_hat, x)\n",
+    "        return loss\n",
+    "\n",
+    "    def configure_optimizers(self):\n",
+    "        optimizer = optim.Adam(self.parameters(), lr=1e-3)\n",
+    "        return optimizer\n",
+    "\n",
+    "\n",
+    "autoencoder = LitAutoEncoder(encoder, decoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65694112-4d70-480e-9f17-e2c438e5e7af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = pl.Trainer(limit_train_batches=100, max_epochs=5)\n",
+    "trainer.fit(model=autoencoder, train_dataloaders=train_loader)"
    ]
   }
  ],
@@ -119,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "nbproject": {
    "id": "GfLCSYv8BjvJ",
