:bento: updated lamindb instance in schema extension notebooks

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "545d165f-750b-4f5e-8b6d-c40444c807ef",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e1128918-6573-4ae0-96f0-90ab1abd4ce3",
    "metadata": {},
@@ -31,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin load mnist-local"
+    "!lamin load mnist-100"
    ]
   },
   {
@@ -43,7 +41,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7a149637-38e4-42d3-a790-e148a468bf4f",
    "metadata": {},
@@ -111,7 +108,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2520f19a-246b-4593-a6bd-ca827165d6b9",
    "metadata": {},
@@ -177,7 +173,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3859d1c0-a8ca-4cf9-b204-c81c6047eeb0",
    "metadata": {},
@@ -217,7 +212,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be47c819-16b1-4660-b8e0-efdff9656ae0",
    "metadata": {},
@@ -242,7 +236,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "39838c5b-0ba9-4d3d-89ff-faaf79f35c92",
    "metadata": {},
@@ -328,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
