--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -133,15 +133,10 @@
     "import lamindb as ln\n",
     "\n",
     "# Select MNIST folder\n",
-    "mnist_folder = ln.select(ln.DFolder, name=\"mnist\").one()\n",
+    "mnist_folder = ln.select(ln.DFolder).one()\n",
     "\n",
     "# Query and load the data object containing the labels dataframe\n",
-    "labels_dobject = (\n",
-    "    ln.select(ln.DObject)\n",
-    "    .join(ln.DObject.dfolders)\n",
-    "    .where(ln.DFolder.id == mnist_folder.id)\n",
-    "    .where(ln.DObject.suffix == \".csv\")\n",
-    ").one()\n",
+    "labels = ln.select(ln.DObject, suffix=\".csv\").one()\n",
     "labels_df = labels_dobject.load()\n",
     "\n",
     "# Ingest label entities (HandwrittenNumber)\n",
@@ -156,7 +151,6 @@
     "        session.select(ln.DObject)\n",
     "        .join(ln.DObject.dfolders)\n",
     "        .where(ln.DFolder.id == mnist_folder.id)\n",
-    "        .where(ln.DObject.suffix == \".png\")\n",
     "    ).all()\n",
     "\n",
     "    # Loop through the feature data objects and link them to their respective labels\n",
@@ -307,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lamin-dev",
    "language": "python",
-   "name": "python3"
+   "name": "lamin-dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -321,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
