:pencil2: fixed typo

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "# Query and load the data object containing the labels dataframe\n",
     "labels = ln.select(ln.DObject, suffix=\".csv\").one()\n",
-    "labels_df = labels_dobject.load()\n",
+    "labels_df = labels.load()\n",
     "\n",
     "# Ingest label entities (HandwrittenNumber)\n",
     "for label in labels_df[\"label\"].unique():\n",
