:memo: added small comment to dataset instantiation

--- a/docs/guide/mnist-local.ipynb
+++ b/docs/guide/mnist-local.ipynb
@@ -248,6 +248,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9aa2b3a4",
+   "metadata": {},
+   "source": [
+    "Let's now instantiate the canonical PyTorch custom image dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "795e6c70-ca26-448a-a9e7-3033e27e4e60",
