💄 Simplify and integrate all notebooks into one (#8)
* :lipstick: ingested mnist data objects through DFolder

* :lipstick: simplified ingestion code

* :lipstick: integrated all notebooks and used canonical pytorch constructs

* :memo: deleted separate notebooks and renamed the integrated one

* :bento: updated lamindb instance in schema extension notebooks

* :memo: update index.md

* :memo: updated schema extension notebook

* :memo: updated kernelspec

* :pencil2: fixed typo

* :fire: removed intro to nb 1

* :memo: added small comment to dataset instantiation

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "545d165f-750b-4f5e-8b6d-c40444c807ef",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e1128918-6573-4ae0-96f0-90ab1abd4ce3",
    "metadata": {},
@@ -31,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin load mnist-local"
+    "!lamin load mnist-100"
    ]
   },
   {
@@ -43,7 +41,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7a149637-38e4-42d3-a790-e148a468bf4f",
    "metadata": {},
@@ -111,7 +108,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2520f19a-246b-4593-a6bd-ca827165d6b9",
    "metadata": {},
@@ -137,16 +133,11 @@
     "import lamindb as ln\n",
     "\n",
     "# Select MNIST folder\n",
-    "mnist_folder = ln.select(ln.DFolder, name=\"mnist\").one()\n",
+    "mnist_folder = ln.select(ln.DFolder).one()\n",
     "\n",
     "# Query and load the data object containing the labels dataframe\n",
-    "labels_dobject = (\n",
-    "    ln.select(ln.DObject)\n",
-    "    .join(ln.DObject.dfolders)\n",
-    "    .where(ln.DFolder.id == mnist_folder.id)\n",
-    "    .where(ln.DObject.suffix == \".csv\")\n",
-    ").one()\n",
-    "labels_df = labels_dobject.load()\n",
+    "labels = ln.select(ln.DObject, suffix=\".csv\").one()\n",
+    "labels_df = labels.load()\n",
     "\n",
     "# Ingest label entities (HandwrittenNumber)\n",
     "for label in labels_df[\"label\"].unique():\n",
@@ -160,7 +151,6 @@
     "        session.select(ln.DObject)\n",
     "        .join(ln.DObject.dfolders)\n",
     "        .where(ln.DFolder.id == mnist_folder.id)\n",
-    "        .where(ln.DObject.suffix == \".png\")\n",
     "    ).all()\n",
     "\n",
     "    # Loop through the feature data objects and link them to their respective labels\n",
@@ -177,7 +167,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3859d1c0-a8ca-4cf9-b204-c81c6047eeb0",
    "metadata": {},
@@ -217,7 +206,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be47c819-16b1-4660-b8e0-efdff9656ae0",
    "metadata": {},
@@ -242,7 +230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "39838c5b-0ba9-4d3d-89ff-faaf79f35c92",
    "metadata": {},
