--- a/docs/guide/mnist-local.ipynb
+++ b/docs/guide/mnist-local.ipynb
@@ -104,11 +104,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e6ed5d2b-0c9d-4a79-837b-5c8137317293",
    "metadata": {},
    "source": [
-    "## Ingest images and labels as data objects"
+    "## Ingest images and labels"
    ]
   },
   {
@@ -126,8 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folderpath = Path(\"mnist-100/images\").resolve()\n",
-    "img_folder = ln.DFolder(folder=folderpath)\n",
+    "img_folder = ln.DFolder(folder=\"mnist-100/images\")\n",
     "ln.add(img_folder);"
    ]
   },
@@ -146,17 +146,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = Path(\"mnist-100/labels.csv\").resolve()\n",
-    "labels = ln.DObject(filepath)\n",
+    "labels = ln.DObject(\"mnist-100/labels.csv\")\n",
     "ln.add(labels);"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "cb80100d",
+   "metadata": {},
+   "source": [
+    "```{important}\n",
+    "\n",
+    "We can equally well pass cloud locations!\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "409f29bd-2044-4051-9323-94db3cf0fac2",
    "metadata": {},
    "source": [
-    "## Build the PyTorch Dataset"
+    "## Create the PyTorch Dataset"
    ]
   },
   {
