:memo: Improve title

--- a/docs/guide/mnist-local.ipynb
+++ b/docs/guide/mnist-local.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b10297e6-e772-4d8d-bb19-9d32b274df3f",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# Training a simple autoencoder with LaminDB and PyTorch"
+    "# Tracking images for use with PyTorch"
    ]
   },
   {
