--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -73,7 +73,7 @@
     "from sqlmodel import SQLModel, Field, Relationship\n",
     "from lnschema_core import DObject\n",
     "from lnschema_core.dev.sqlmodel import add_relationships\n",
-    "from lamin import settings\n",
+    "from lamindb.setup import settings\n",
     "from typing import Optional, List\n",
     "\n",
     "# Create linked table between new entity and target entity\n",
@@ -315,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
