:memo: Harmonize headings

--- a/docs/guide/mnist-local.ipynb
+++ b/docs/guide/mnist-local.ipynb
@@ -8,7 +8,7 @@
     "tags": []
    },
    "source": [
-    "# Tracking images for use with PyTorch"
+    "# Tracking images for PyTorch"
    ]
   },
   {
