:green_heart: Rename DObject to File and DFolder to Folder

--- a/docs/guide/mnist-local.ipynb
+++ b/docs/guide/mnist-local.ipynb
@@ -108,7 +108,7 @@
    "id": "6c79f86d-c7e7-4e2d-b54e-8dc399223d4d",
    "metadata": {},
    "source": [
-    "Let's ingest each image in the folder as a `DObject` record by leveraging the `DFolder` entity."
+    "Let's ingest each image in the folder as a `File` record by leveraging the `Folder` entity."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_folder = ln.DFolder(folder=\"mnist-100/images\")\n",
+    "img_folder = ln.Folder(folder=\"mnist-100/images\")\n",
     "ln.add(img_folder);"
    ]
   },
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ln.DObject(\"mnist-100/labels.csv\")\n",
+    "labels = ln.File(\"mnist-100/labels.csv\")\n",
     "ln.add(labels);"
    ]
   },
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_folder = ln.select(ln.DFolder).one()\n",
+    "img_folder = ln.select(ln.Folder).one()\n",
     "img_folderpath = img_folder.path()"
    ]
   },
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ln.select(ln.DObject, suffix=\".csv\").one()\n",
+    "labels = ln.select(ln.File, suffix=\".csv\").one()\n",
     "labels_filepath = labels.path()"
    ]
   },
