--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "In the previous notebooks, we have ingested a ML dataset, prepared a PyTorch dataset, and trained a simple autoencoder as part of our use case demonstration of LaminDB applied to ML workflows.\n",
     "\n",
-    "When preparing a PyTorch dataset, we manually fetched labels on a `labels.csv` file based on the filename of each data object. It would be much easier, however, if we could to query the label for a given dobject with the LaminDB API or, similarly, query a collection of data objects based on any given label.\n",
+    "When preparing a PyTorch dataset, we manually fetched labels on a `labels.csv` file based on the filename of each data object. It would be much easier, however, if we could to query the label for a given file with the LaminDB API or, similarly, query a collection of data objects based on any given label.\n",
     "\n",
     "LaminDB allows users to create custom entities and link them to any existing schema entities through simple extensions of its core schema.\n",
     "\n",
@@ -37,7 +37,7 @@
    "id": "798dd2d3-3c62-419b-9584-c2b89f664855",
    "metadata": {},
    "source": [
-    "## Creating a `HandwrittenNumber` entity linked to a `DObject`"
+    "## Creating a `HandwrittenNumber` entity linked to a `File`"
    ]
   },
   {
@@ -47,10 +47,10 @@
    "source": [
     "We can extend the core LaminDB schema by writing our own SQLModel ORMs.\n",
     "\n",
-    "We'd like to link `HandwrittenNumber` records to `DObject` records (the images).\n",
+    "We'd like to link `HandwrittenNumber` records to `File` records (the images).\n",
     "\n",
     "As `HandwrittenNumber` is not present in any of the default schema modules, we need to go through 3 steps:\n",
-    "- Creation of a LinkORM between the new entity (`HandwrittenNumber`) and the target entity (`DObject`).\n",
+    "- Creation of a LinkORM between the new entity (`HandwrittenNumber`) and the target entity (`File`).\n",
     "- Creation of the `HandwrittenNumber` ORM with an attribute referencing the target entity (relationship).\n",
     "- Creation of the ORM relationship attribute in the target entity.\n",
     "\n",
@@ -71,22 +71,22 @@
    "outputs": [],
    "source": [
     "from sqlmodel import SQLModel, Field, Relationship\n",
-    "from lnschema_core import DObject\n",
+    "from lnschema_core import File\n",
     "from lnschema_core.dev.sqlmodel import add_relationships\n",
     "from lamindb.setup import settings\n",
     "from typing import Optional, List\n",
     "\n",
     "# Create linked table between new entity and target entity\n",
-    "class DObjectHandwrittenNumber(SQLModel, table=True):\n",
-    "    \"\"\"Link table between DObject and HandwrittenNumber.\"\"\"\n",
+    "class FileHandwrittenNumber(SQLModel, table=True):\n",
+    "    \"\"\"Link table between File and HandwrittenNumber.\"\"\"\n",
     "\n",
-    "    dobject_id: str = Field(foreign_key=DObject.id, primary_key=True)\n",
+    "    file_id: str = Field(foreign_key=File.id, primary_key=True)\n",
     "    handwritten_number_id: str = Field(\n",
     "        foreign_key=\"handwritten_number.id\", primary_key=True\n",
     "    )\n",
     "\n",
     "\n",
-    "# Create new entity table with a relationship attribute (dobjects)\n",
+    "# Create new entity table with a relationship attribute (files)\n",
     "class HandwrittenNumber(SQLModel, table=True):\n",
     "    \"\"\"Handwritten number entity.\"\"\"\n",
     "\n",
@@ -94,9 +94,9 @@
     "\n",
     "    id: Optional[int] = Field(default=None, primary_key=True)\n",
     "    name: str\n",
-    "    dobjects: List[DObject] = Relationship(\n",
+    "    files: List[File] = Relationship(\n",
     "        back_populates=\"handwritten_numbers\",\n",
-    "        sa_relationship_kwargs=dict(secondary=DObjectHandwrittenNumber.__table__),\n",
+    "        sa_relationship_kwargs=dict(secondary=FileHandwrittenNumber.__table__),\n",
     "    )\n",
     "\n",
     "\n",
@@ -133,10 +133,10 @@
     "import lamindb as ln\n",
     "\n",
     "# Select MNIST folder\n",
-    "mnist_folder = ln.select(ln.DFolder).one()\n",
+    "mnist_folder = ln.select(ln.Folder).one()\n",
     "\n",
     "# Query and load the data object containing the labels dataframe\n",
-    "labels = ln.select(ln.DObject, suffix=\".csv\").one()\n",
+    "labels = ln.select(ln.File, suffix=\".csv\").one()\n",
     "labels_df = labels.load()\n",
     "\n",
     "# Ingest label entities (HandwrittenNumber)\n",
@@ -145,25 +145,25 @@
     "\n",
     "# Query all feature data objects (MNIST images)\n",
     "# ORM relationship attributes are lazy loaded, so we need to bound data objects\n",
-    "# to a session in order to access and assign values to DObject.handwritten_number\n",
+    "# to a session in order to access and assign values to File.handwritten_number\n",
     "with ln.Session() as session:\n",
-    "    feature_dobjects = (\n",
-    "        session.select(ln.DObject)\n",
-    "        .join(ln.DObject.dfolders)\n",
-    "        .where(ln.DFolder.id == mnist_folder.id)\n",
+    "    feature_files = (\n",
+    "        session.select(ln.File)\n",
+    "        .join(ln.File.folders)\n",
+    "        .where(ln.Folder.id == mnist_folder.id)\n",
     "    ).all()\n",
     "\n",
     "    # Loop through the feature data objects and link them to their respective labels\n",
-    "    updated_dobjects = []\n",
-    "    for dobject in feature_dobjects:\n",
-    "        filename = dobject.name + dobject.suffix\n",
+    "    updated_files = []\n",
+    "    for file in feature_files:\n",
+    "        filename = file.name + file.suffix\n",
     "        label = labels_df.loc[labels_df[\"filename\"] == filename, \"label\"].item()\n",
     "        handwritten_number = session.select(HandwrittenNumber, name=label).one()\n",
-    "        dobject.handwritten_numbers = [handwritten_number]\n",
-    "        updated_dobjects += [dobject]\n",
+    "        file.handwritten_numbers = [handwritten_number]\n",
+    "        updated_files += [file]\n",
     "\n",
     "    # Ingest data objects and their linked labels\n",
-    "    session.add(updated_dobjects)"
+    "    session.add(updated_files)"
    ]
   },
   {
@@ -197,12 +197,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dobjects = (\n",
-    "    ln.select(ln.DObject)\n",
-    "    .join(ln.DObject.handwritten_numbers)\n",
+    "files = (\n",
+    "    ln.select(ln.File)\n",
+    "    .join(ln.File.handwritten_numbers)\n",
     "    .where(HandwrittenNumber.name == \"2\")\n",
     ").all()\n",
-    "dobjects"
+    "files"
    ]
   },
   {
@@ -223,10 +223,10 @@
     "import random\n",
     "\n",
     "with ln.Session() as session:\n",
-    "    dobjects = session.select(ln.DObject).join(ln.DObject.handwritten_numbers).all()\n",
-    "    dobject = random.choice(dobjects)\n",
-    "    dobject.handwritten_numbers  # lazy load handwritten_number relationships inside of session\n",
-    "dobject.handwritten_numbers"
+    "    files = session.select(ln.File).join(ln.File.handwritten_numbers).all()\n",
+    "    file = random.choice(files)\n",
+    "    file.handwritten_numbers  # lazy load handwritten_number relationships inside of session\n",
+    "file.handwritten_numbers"
    ]
   },
   {
@@ -258,21 +258,19 @@
     "\n",
     "\n",
     "class LNDataset(Dataset):\n",
-    "    def __init__(self, dfolder: ln.DFolder):\n",
-    "        # query dobjects in the data folder\n",
-    "        self.dobjects = (\n",
-    "            ln.select(ln.DObject)\n",
-    "            .join(ln.DObject.dfolders)\n",
-    "            .where(ln.DFolder.id == dfolder.id)\n",
+    "    def __init__(self, folder: ln.Folder):\n",
+    "        # query files in the data folder\n",
+    "        self.files = (\n",
+    "            ln.select(ln.File).join(ln.File.folders).where(ln.Folder.id == folder.id)\n",
     "        ).all()\n",
     "\n",
     "        # define features and labels\n",
-    "        self.feature_dobjects = []\n",
-    "        for dobject in self.dobjects:\n",
-    "            if dobject.name == \"labels\":  # load and define dataframe with labels\n",
-    "                self.img_labels = dobject.load()\n",
+    "        self.feature_files = []\n",
+    "        for file in self.files:\n",
+    "            if file.name == \"labels\":  # load and define dataframe with labels\n",
+    "                self.img_labels = file.load()\n",
     "            else:\n",
-    "                self.feature_dobjects += [dobject]\n",
+    "                self.feature_files += [file]\n",
     "\n",
     "        # set key torch.utils.data.Dataset attributes\n",
     "        self.transform = ToTensor()\n",
@@ -284,12 +282,12 @@
     "    def __getitem__(self, idx):\n",
     "        # bound data object to session in order to lazy load the DOBject.handwritten_number relationship\n",
     "        with ln.Session() as session:\n",
-    "            # get feature dobject\n",
-    "            dobject = session.select(ln.DObject, id=self.feature_dobjects[idx].id).one()\n",
-    "            # get label from feature dobject\n",
-    "            label = dobject.handwritten_numbers\n",
-    "        # get feature (image) from feature dobject\n",
-    "        path = dobject.load()\n",
+    "            # get feature file\n",
+    "            file = session.select(ln.File, id=self.feature_files[idx].id).one()\n",
+    "            # get label from feature file\n",
+    "            label = file.handwritten_numbers\n",
+    "        # get feature (image) from feature file\n",
+    "        path = file.load()\n",
     "        image = Image.open(path)\n",
     "        if self.transform:\n",
     "            image = self.transform(image)\n",
