--- a/docs/guide/mnist-local.ipynb
+++ b/docs/guide/mnist-local.ipynb
@@ -8,7 +8,7 @@
     "tags": []
    },
    "source": [
-    "# Tracking images for PyTorch"
+    "# Track images for PyTorch"
    ]
   },
   {
@@ -31,7 +31,7 @@
     "import lamindb as ln\n",
     "import pandas as pd\n",
     "\n",
-    "ln.nb.header()"
+    "ln.track()"
    ]
   },
   {
