:green_heart: Attempt fix

--- a/docs/guide/mnist-local.ipynb
+++ b/docs/guide/mnist-local.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_folder = ln.Folder(folder=\"mnist-100/images\")\n",
+    "img_folder = ln.Folder(\"mnist-100/images\")\n",
     "ln.add(img_folder);"
    ]
   },
