:green_heart: Attempt fix

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -156,8 +156,7 @@
     "    # Loop through the feature data objects and link them to their respective labels\n",
     "    updated_files = []\n",
     "    for file in feature_files:\n",
-    "        filename = file.name + file.suffix\n",
-    "        label = labels_df.loc[labels_df[\"filename\"] == filename, \"label\"].item()\n",
+    "        label = labels_df.loc[labels_df[\"filename\"] == file.name, \"label\"].item()\n",
     "        handwritten_number = session.select(HandwrittenNumber, name=label).one()\n",
     "        file.handwritten_numbers = [handwritten_number]\n",
     "        updated_files += [file]\n",
