--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -76,31 +76,30 @@
     "from lamindb.setup import settings\n",
     "from typing import Optional, List\n",
     "\n",
-    "# Create linked table between new entity and target entity\n",
+    "\n",
     "class FileHandwrittenNumber(SQLModel, table=True):\n",
     "    \"\"\"Link table between File and HandwrittenNumber.\"\"\"\n",
     "\n",
+    "    __tablename__ = \"file_handwritten_number\"\n",
+    "\n",
     "    file_id: str = Field(foreign_key=File.id, primary_key=True)\n",
-    "    handwritten_number_id: str = Field(\n",
+    "    handwrittennumber_id: int = Field(\n",
     "        foreign_key=\"handwritten_number.id\", primary_key=True\n",
     "    )\n",
     "\n",
     "\n",
-    "# Create new entity table with a relationship attribute (files)\n",
     "class HandwrittenNumber(SQLModel, table=True):\n",
     "    \"\"\"Handwritten number entity.\"\"\"\n",
     "\n",
-    "    __tablename__ = \"handwritten_number\"  # make tablename snake case for readability\n",
+    "    __tablename__ = \"handwritten_number\"\n",
     "\n",
-    "    id: Optional[int] = Field(default=None, primary_key=True)\n",
-    "    name: str\n",
+    "    id: int = Field(primary_key=True)\n",
     "    files: List[File] = Relationship(\n",
     "        back_populates=\"handwritten_numbers\",\n",
-    "        sa_relationship_kwargs=dict(secondary=FileHandwrittenNumber.__table__),\n",
+    "        link_model=FileHandwrittenNumber,\n",
     "    )\n",
     "\n",
     "\n",
-    "# Create relationship attributes in the target entity\n",
     "add_relationships(HandwrittenNumber)\n",
     "\n",
     "# Create tables in the database\n",
@@ -199,7 +198,7 @@
     "files = (\n",
     "    ln.select(ln.File)\n",
     "    .join(ln.File.handwritten_numbers)\n",
-    "    .where(HandwrittenNumber.name == \"2\")\n",
+    "    .where(HandwrittenNumber.id == 2)\n",
     ").all()\n",
     "files"
    ]
