--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -78,22 +78,23 @@
     "\n",
     "\n",
     "class FileHandwrittenNumber(SQLModel, table=True):\n",
-    "    \"\"\"Link table between File and HandwrittenNumber.\"\"\"\n",
+    "    \"\"\"Link table.\"\"\"\n",
     "\n",
     "    __tablename__ = \"file_handwritten_number\"\n",
     "\n",
     "    file_id: str = Field(foreign_key=File.id, primary_key=True)\n",
-    "    handwrittennumber_id: int = Field(\n",
+    "    handwritten_number_id: int = Field(\n",
     "        foreign_key=\"handwritten_number.id\", primary_key=True\n",
     "    )\n",
     "\n",
     "\n",
     "class HandwrittenNumber(SQLModel, table=True):\n",
-    "    \"\"\"Handwritten number entity.\"\"\"\n",
+    "    \"\"\"Handwritten numbers.\"\"\"\n",
     "\n",
     "    __tablename__ = \"handwritten_number\"\n",
     "\n",
     "    id: int = Field(primary_key=True)\n",
+    "    name: str\n",
     "    files: List[File] = Relationship(\n",
     "        back_populates=\"handwritten_numbers\",\n",
     "        link_model=FileHandwrittenNumber,\n",
@@ -198,7 +199,7 @@
     "files = (\n",
     "    ln.select(ln.File)\n",
     "    .join(ln.File.handwritten_numbers)\n",
-    "    .where(HandwrittenNumber.id == 2)\n",
+    "    .where(HandwrittenNumber.name == \"2\")\n",
     ").all()\n",
     "files"
    ]
